--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +19,7 @@
     <input type="password" id="password" name="password" class="form-control">
     <button type="submit" class="btn btn-primary">로그인</button>
     <a href="#" th:href="@{/oauth2/authorization/google}" class="social">구글<i class="fab fa-google-plus-g"></i></a>
+    <a href="#" th:href="@{/oauth2/authorization/naver}" class="social">네이버<i class="fab fa-google-plus-g"></i></a>
   </form>
   <!-- 로그인 정보 및 로그아웃 버튼 -->
   <div th:if="${#authorization.expression('isAuthenticated()')}">
