--- a/src/main/resources/templates/member/view.html
+++ b/src/main/resources/templates/member/view.html
@@ -35,9 +35,9 @@
         </tbody>
     </table>
     <div class="btn-group">
-        <a class="btn btn-primary" th:href="@{/listView}" role="button">목록</a>
-        <a class="btn btn-secondary" th:href="@{/modify/{id}(id=${member.id})}" role="button">수정</a>
-        <a class="btn btn-danger" th:href="@{/memberDelete/{id}(id=${member.id})}" role="button">삭제</a>
+        <a class="btn btn-primary" th:href="@{/member/listView}" role="button">목록</a>
+        <a class="btn btn-secondary" th:href="@{/member/modify/{id}(id=${member.id})}" role="button">수정</a>
+        <a class="btn btn-danger" th:href="@{/member/memberDelete/{id}(id=${member.id})}" role="button">삭제</a>
     </div>
 </div>
 
