--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -40,8 +40,8 @@
     <div sec:authorize="hasAuthority('ROLE_ADMIN')">
       <button class="btn btn-sm btn-success">ADMIN</button>
     </div>
-
     <a th:href="@{/member/admin}" class="btn btn-danger">관리자 페이지</a>
+    <a th:href="@{/member/chart}" class="btn btn-danger">차트보기</a>
   </div>
   <br/>
   <a th:href="@{/member/memberRegister}" class="btn btn-primary">회원가입</a> <!-- 회원가입 버튼 추가 -->
