--- a/src/main/resources/templates/chart/chart.html
+++ b/src/main/resources/templates/chart/chart.html
@@ -6,14 +6,38 @@
     <link rel="stylesheet" href="https://uicdn.toast.com/chart/latest/toastui-chart.min.css" />
     <script src="https://uicdn.toast.com/chart/latest/toastui-chart.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script>
-        $(document).ready(function(){
-
-
-        });
-    </script>
 </head>
 <body>
- 차트 그리기~~~
+   <div id="chart-area"></div>
+   <script>
+       $(document).ready(function(){
+        const el = document.getElementById('chart-area');
+        const data = {
+        categories: ['Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+        series: [
+          {
+            name: 'Budget',
+            data: [5000, 3000, 5000, 7000, 6000, 4000, 1000],
+          },
+          {
+            name: 'Income',
+            data: [8000, 4000, 7000, 2000, 6000, 3000, 5000],
+          },
+          {
+            name: 'Expenses',
+            data: [4000, 4000, 6000, 3000, 4000, 5000, 7000],
+          },
+          {
+            name: 'Debt',
+            data: [3000, 4000, 3000, 1000, 2000, 4000, 3000],
+          },
+        ],
+      };
+      const options = {
+        chart: { title: 'Monthly Revenue', width: 900, height: 400 },
+      };
+      const chart = toastui.Chart.barChart({ el, data, options });
+     });
+   </script>
 </body>
 </html>
