--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -41,7 +41,8 @@
       <button class="btn btn-sm btn-success">ADMIN</button>
     </div>
     <a th:href="@{/member/admin}" class="btn btn-danger">관리자 페이지</a>
-    <a th:href="@{/member/chart}" class="btn btn-danger">차트보기</a>
+    <a th:href="@{/member/chart}" class="btn btn-danger">Chart보기</a>
+    <a th:href="@{/member/grid}" class="btn btn-danger">Grid보기</a>
   </div>
   <br/>
   <a th:href="@{/member/memberRegister}" class="btn btn-primary">회원가입</a> <!-- 회원가입 버튼 추가 -->
