--- a/src/main/resources/templates/chart/grid.html
+++ b/src/main/resources/templates/chart/grid.html
@@ -20,26 +20,67 @@
               columns: [
                 {
                   header: 'ID',
-                  name: 'id'
+                  name: 'id',
+                  filter: 'select',
+                  sortingType: 'asc',
+                  sortable: true
                 },
                 {
                   header: '아이디',
-                  name: 'username'
+                  name: 'username',
+                  formatter: 'listItemText',
+                  editor: {
+                    type: 'checkbox',
+                    options: {
+                      listItems: [
+                        { text: 'Pop', value: '1' },
+                        { text: 'Rock', value: '2' },
+                        { text: 'R&B', value: '3' },
+                        { text: 'Electronic', value: '4' },
+                        { text: 'etc.', value: '5' }
+                      ]
+                    }
+                  }
                 },
                 {
                   header: '이름',
-                  name: 'memName'
+                  name: 'memName',
+                  filter: {
+                    type: 'date',
+                    options: {
+                      format: 'yyyy.MM.dd'
+                    }
+                  }
                 },
                 {
                   header: '나이',
-                  name: 'memAge'
+                  name: 'memAge',
+                  filter: 'number',
+                  editor: 'text'
                 },
                 {
                   header: '이메일',
-                  name: 'memEmail'
+                  name: 'memEmail',
+                  formatter: 'listItemText',
+                      editor: {
+                      type: 'select',
+                      options: {
+                          listItems: [
+                            { text: 'Deluxe', value: '1' },
+                            { text: 'EP', value: '2' },
+                            { text: 'Single', value: '3' }
+                          ]
+                      }
+                   }
                 }
               ]
             });
+            grid.on('beforeChange', ev => {
+              console.log('before change:', ev);
+            });
+            grid.on('afterChange', ev => {
+              console.log('after change:', ev);
+            })
        });
    </script>
 </body>
